resolve text overflow

--- a/src/app/static/css/3-col-portfolio.css
+++ b/src/app/static/css/3-col-portfolio.css
@@ -29,9 +29,8 @@ footer {
   background-color: #f8f8f8;
 
 }
-.btn {
 
-}
+
 
 
 
